[gd_scene load_steps=2 format=3 uid="uid://bydcbe6o1aug7"]

[ext_resource type="Script" uid="uid://c45e33la5017a" path="res://Scenes/OptionsMenu.gd" id="1_jrbyj"]

[node name="OptionMenu" type="CanvasLayer"]
script = ExtResource("1_jrbyj")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -48.0
theme_override_font_sizes/font_size = 20
tab_alignment = 1
current_tab = 0

[node name="Display" type="VBoxContainer" parent="Panel/TabContainer"]
layout_mode = 2
theme_override_constants/separation = 50
metadata/_tab_index = 0

[node name="ResolutionOption" type="OptionButton" parent="Panel/TabContainer/Display"]
layout_mode = 2

[node name="Warn" type="Label" parent="Panel/TabContainer/Display/ResolutionOption"]
modulate = Color(1, 0.700333, 0.38, 1)
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_right = 1280.0
offset_bottom = 50.0
grow_vertical = 0
text = "Resolution only applies in Windowed mode."
vertical_alignment = 1

[node name="WindowModeOption" type="OptionButton" parent="Panel/TabContainer/Display"]
layout_mode = 2
item_count = 1
popup/item_0/id = 0

[node name="FPSCapOption" type="OptionButton" parent="Panel/TabContainer/Display"]
layout_mode = 2
item_count = 1
popup/item_0/id = 0

[node name="Graphics" type="VBoxContainer" parent="Panel/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Gameplay" type="VBoxContainer" parent="Panel/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Audio" type="VBoxContainer" parent="Panel/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="ConfirmButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1100.0
offset_top = 675.0
grow_horizontal = 0
grow_vertical = 0
text = "Confirm"

[node name="CancelButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 675.0
offset_right = -1100.0
text = "Back"

[node name="RestartNoticeLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 180.0
offset_top = 675.0
offset_right = -180.0
text = "To avoid problems, please confirm and restart the game."
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="item_selected" from="Panel/TabContainer/Display/ResolutionOption" to="." method="_on_any_option_changed"]
[connection signal="item_selected" from="Panel/TabContainer/Display/WindowModeOption" to="." method="_on_any_option_changed"]
[connection signal="item_selected" from="Panel/TabContainer/Display/FPSCapOption" to="." method="_on_any_option_changed"]
[connection signal="pressed" from="Panel/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="Panel/CancelButton" to="." method="_on_cancel_button_pressed"]
